force-app/main/default/objects/Knowledge__kav/fields/Benefit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefit Flag</label>
    <type>Checkbox</type>
</CustomField>