force-app/main/default/objects/Knowledge__kav/fields/Biaya_Flag__c.field-meta.xml
<CustomField>
    <fullName>Biaya_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biaya Flag</label>
    <type>Checkbox</type>
</CustomField>