force-app/main/default/objects/Knowledge__kav/fields/bunga_flag__c.field-meta.xml
<CustomField>
    <fullName>bunga_flag__c</fullName>
    <label>bunga_flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>