force-app/main/default/objects/Knowledge__kav/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use this field to document the answer to the question discussed in the Knowledge Article.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>