force-app/main/default/objects/Knowledge__kav/fields/Hasil_Integrasi__c.field-meta.xml
<CustomField>
    <fullName>Hasil_Integrasi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hasil Integrasi</label>
    <type>Checkbox</type>
</CustomField>