force-app/main/default/objects/Knowledge__kav/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <type>Url</type>
</CustomField>