force-app/main/default/objects/Knowledge__kav/fields/Jenis_Produk__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Produk__c</fullName>
    <inlineHelpText>Use this field to document the answer to the question discussed in the Knowledge Article.</inlineHelpText>
    <label>Jenis Produk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>