force-app/main/default/objects/Knowledge__kav/fields/Limit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Limit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limit Flag</label>
    <type>Checkbox</type>
</CustomField>