force-app/main/default/objects/Knowledge__kav/fields/Panduan_Penggunaan__c.field-meta.xml
<CustomField>
    <fullName>Panduan_Penggunaan__c</fullName>
    <label>Panduan Penggunaan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>