force-app/main/default/objects/Knowledge__kav/fields/Panduan_Produk__c.field-meta.xml
<CustomField>
    <fullName>Panduan_Produk__c</fullName>
    <label>Panduan Produk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>