force-app/main/default/objects/Knowledge__kav/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promo</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Produk</fullName>
            </value>
            <value>
                <fullName>Working Instruction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>