force-app/main/default/objects/Knowledge__kav/fields/SCC_Article_Type__c.field-meta.xml
<CustomField>
    <fullName>SCC_Article_Type__c</fullName>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Working Instruction</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>