force-app/main/default/objects/Knowledge__kav/fields/SCC_Benefit__c.field-meta.xml
<CustomField>
    <fullName>SCC_Benefit__c</fullName>
    <label>Benefit</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>