force-app/main/default/objects/Knowledge__kav/fields/SCC_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>SCC_Call_Type__c</fullName>
    <label>Case Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>