force-app/main/default/objects/Knowledge__kav/fields/SCC_Category__c.field-meta.xml
<CustomField>
    <fullName>SCC_Category__c</fullName>
    <label>Kategori</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>