force-app/main/default/objects/Knowledge__kav/fields/SCC_Channel__c.field-meta.xml
<CustomField>
    <fullName>SCC_Channel__c</fullName>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>