force-app/main/default/objects/Knowledge__kav/fields/SCC_Checking__c.field-meta.xml
<CustomField>
    <fullName>SCC_Checking__c</fullName>
    <label>Cek Laporan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>