force-app/main/default/objects/Knowledge__kav/fields/SCC_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>SCC_Confirmation__c</fullName>
    <label>Konfirmasi</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>