force-app/main/default/objects/Knowledge__kav/fields/SCC_Content__c.field-meta.xml
<CustomField>
    <fullName>SCC_Content__c</fullName>
    <label>Isi Knowledge</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>