force-app/main/default/objects/Knowledge__kav/fields/SCC_Create_Report__c.field-meta.xml
<CustomField>
    <fullName>SCC_Create_Report__c</fullName>
    <label>Pembuatan Laporan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>