force-app/main/default/objects/Knowledge__kav/fields/SCC_Definition__c.field-meta.xml
<CustomField>
    <fullName>SCC_Definition__c</fullName>
    <label>Definisi</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>