force-app/main/default/objects/Knowledge__kav/fields/SCC_Description__c.field-meta.xml
<CustomField>
    <fullName>SCC_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>