force-app/main/default/objects/Knowledge__kav/fields/SCC_Education__c.field-meta.xml
<CustomField>
    <fullName>SCC_Education__c</fullName>
    <label>Edukasi Cross Selling</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>