force-app/main/default/objects/Knowledge__kav/fields/SCC_Emphaty__c.field-meta.xml
<CustomField>
    <fullName>SCC_Emphaty__c</fullName>
    <label>Empati</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>