force-app/main/default/objects/Knowledge__kav/fields/SCC_End__c.field-meta.xml
<CustomField>
    <fullName>SCC_End__c</fullName>
    <label>End</label>
    <type>Date</type>
</CustomField>