force-app/main/default/objects/Knowledge__kav/fields/SCC_Expediting_Complaints__c.field-meta.xml
<CustomField>
    <fullName>SCC_Expediting_Complaints__c</fullName>
    <label>Percepatan Komplain</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>