force-app/main/default/objects/Knowledge__kav/fields/SCC_Feature__c.field-meta.xml
<CustomField>
    <fullName>SCC_Feature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fitur</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>