force-app/main/default/objects/Knowledge__kav/fields/SCC_Fee__c.field-meta.xml
<CustomField>
    <fullName>SCC_Fee__c</fullName>
    <label>Biaya</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>