force-app/main/default/objects/Knowledge__kav/fields/SCC_Get_Information__c.field-meta.xml
<CustomField>
    <fullName>SCC_Get_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gali Informasi</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>