force-app/main/default/objects/Knowledge__kav/fields/SCC_Interest__c.field-meta.xml
<CustomField>
    <fullName>SCC_Interest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bunga</label>
    <length>9000</length>
    <type>Html</type>
</CustomField>