force-app/main/default/objects/Knowledge__kav/fields/SCC_Limit__c.field-meta.xml
<CustomField>
    <fullName>SCC_Limit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Limit</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>