force-app/main/default/objects/Knowledge__kav/fields/SCC_Location__c.field-meta.xml
<CustomField>
    <fullName>SCC_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lokasi</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>