force-app/main/default/objects/Knowledge__kav/fields/SCC_Markdown_Term_and_Condition__c.field-meta.xml
<CustomField>
    <fullName>SCC_Markdown_Term_and_Condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Markdown Syarat dan Ketentuan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>