force-app/main/default/objects/Knowledge__kav/fields/SCC_Merchant__c.field-meta.xml
<CustomField>
    <fullName>SCC_Merchant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Merchant</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>