force-app/main/default/objects/Knowledge__kav/fields/SCC_Message_WI__c.field-meta.xml
<CustomField>
    <fullName>SCC_Message_WI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message WI</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>