force-app/main/default/objects/Knowledge__kav/fields/SCC_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>SCC_Modified_Time__c</fullName>
    <label>Modified Time</label>
    <type>DateTime</type>
</CustomField>