force-app/main/default/objects/Knowledge__kav/fields/SCC_Opening_Requirements__c.field-meta.xml
<CustomField>
    <fullName>SCC_Opening_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Syarat Pembukaan</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>