force-app/main/default/objects/Knowledge__kav/fields/SCC_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>SCC_Product_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Jenis Produk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>