force-app/main/default/objects/Knowledge__kav/fields/SCC_Product_Variant__c.field-meta.xml
<CustomField>
    <fullName>SCC_Product_Variant__c</fullName>
    <label>Varian Produk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>