force-app/main/default/objects/Knowledge__kav/fields/SCC_Produk__c.field-meta.xml
<CustomField>
    <fullName>SCC_Produk__c</fullName>
    <label>Produk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>