force-app/main/default/objects/Knowledge__kav/fields/SCC_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>SCC_Program_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nama Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>