force-app/main/default/objects/Knowledge__kav/fields/SCC_Reconfirm__c.field-meta.xml
<CustomField>
    <fullName>SCC_Reconfirm__c</fullName>
    <label>Konfirmasi Ulang</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>