force-app/main/default/objects/Knowledge__kav/fields/SCC_Section__c.field-meta.xml
<CustomField>
    <fullName>SCC_Section__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Section</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>