force-app/main/default/objects/Knowledge__kav/fields/SCC_Solution_Information__c.field-meta.xml
<CustomField>
    <fullName>SCC_Solution_Information__c</fullName>
    <label>Solusi &amp; Informasi</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>