force-app/main/default/objects/Knowledge__kav/fields/SCC_Start__c.field-meta.xml
<CustomField>
    <fullName>SCC_Start__c</fullName>
    <label>Start</label>
    <type>Date</type>
</CustomField>