force-app/main/default/objects/Knowledge__kav/fields/SCC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>SCC_Sub_Category__c</fullName>
    <label>Sub Kategori</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>