force-app/main/default/objects/Knowledge__kav/fields/SCC_Term_Condition__c.field-meta.xml
<CustomField>
    <fullName>SCC_Term_Condition__c</fullName>
    <label>Syarat dan Ketentuan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>