force-app/main/default/objects/Knowledge__kav/fields/SCC_User__c.field-meta.xml
<CustomField>
    <fullName>SCC_User__c</fullName>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>