force-app/main/default/objects/Knowledge__kav/fields/SCC_Verification__c.field-meta.xml
<CustomField>
    <fullName>SCC_Verification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verifikasi</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>