force-app/main/default/objects/Knowledge__kav/fields/SCC_Withdrawal_Closing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>SCC_Withdrawal_Closing_Requirements__c</fullName>
    <label>Syarat Pencairan &amp; Penutupan</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>