force-app/main/default/objects/Knowledge__kav/fields/Syarat_dan_Ketentuan_Flag__c.field-meta.xml
<CustomField>
    <fullName>Syarat_dan_Ketentuan_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Syarat dan Ketentuan Flag</label>
    <type>Checkbox</type>
</CustomField>