force-app/main/default/objects/Knowledge__kav/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>BRILink</fullName>
            </value>
            <value>
                <fullName>CERIA</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>EDC</fullName>
            </value>
            <value>
                <fullName>NIK</fullName>
            </value>
            <value>
                <fullName>Qlola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>