force-app/main/default/objects/Knowledge__kav/recordTypes/Non_Working_Instruction.recordType-meta.xml
<RecordType>
    <fullName>Non_Working_Instruction</fullName>
    <active>false</active>
    <description>Knowledge Articke For Non-Working Instruction</description>
    <label>Non-Working Instruction</label>
</RecordType>