force-app/main/default/objects/Knowledge__kav/recordTypes/Program.recordType-meta.xml
<RecordType>
    <fullName>Program</fullName>
    <active>true</active>
    <description>Knowledge Article For Program</description>
    <label>Program</label>
</RecordType>