force-app/main/default/objects/Knowledge__kav/recordTypes/Promotion.recordType-meta.xml
<RecordType>
    <fullName>Promotion</fullName>
    <active>true</active>
    <description>Knowledge Articles For Promotion (WISE Integration)</description>
    <label>Promotion</label>
</RecordType>