force-app/main/default/objects/Knowledge__kav/recordTypes/test.recordType-meta.xml
<RecordType>
    <fullName>test</fullName>
    <active>false</active>
    <label>test</label>
</RecordType>