force-app/main/default/objects/Knowledge__kav/recordTypes/Working_Instructions.recordType-meta.xml
<RecordType>
    <fullName>Working_Instructions</fullName>
    <active>true</active>
    <description>Knowledge Articles For  Working Instruction</description>
    <label>Working Instructions</label>
</RecordType>