force-app/main/default/objects/Knowledge__kav/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>