force-app/main/default/objects/Knowledge__kav/listViews/draft_articles.listView-meta.xml
<ListView>
    <fullName>draft_articles</fullName>
    <columns>URL_NAME</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>RECORDTYPE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ARTICLE_CREATED_DATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Draft Articles</label>
</ListView>